# minidocker

./: CHANGELOG.md  Dockerfile  LICENSE  README.rst  build  pyproject.toml  release  run
.githooks/: pre-commit
src/minidocker/: __init__.py  __main__.py  _find_image.py  _make_version.py  _util.py
src/minidocker/githooks/: README  pre-commit
src/minidocker/py/: __init__.py  __main__.py  _build.py  _build_for_pkg.py  _run.py  _util.py  build.py  run.py
src/minidocker/py/githooks/: README  pre-commit
