[build-system]
requires = ["flit_core >=3.7.1,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "minidocker"
authors = [
    {name = "Zepu Zhang", email = "zepu.zhang@gmail.com"},
]
requires-python = ">=3.8"
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ['version', 'description']


[project.urls]
Source = "https://github.com/zpz/minidocker"

